# JaegerAI

./: .gitattributes  .gitignore  CHANGELOG.md  COMMANDS.md  README.md  index.html  install.sh  jaeger  jaeger.toml  jaeger.windowed.toml  pyproject.toml  requirements-kokoro.txt  requirements-whisper.txt  requirements.txt  run.sh
clients/python/: jros_client.py
dev/benchmark/: HISTORY.md  TEST_PROMPTS.md  bench.py  everyday_eval.py  last_run_transcript.md  make_transcript.py  persona_eval.py  scenarios.py  transcript_BEFORE_refactor.md
dev/benchmark/results/: .gitkeep
dev/docs/: README.md
dev/docs/archive/: JROS_DAEMON_ARCH_BRIEF.md
dev/docs/audio/: 0.4.0_audio_refactor_prompt.md  0.4.0_review_patch_prompt.md  0.4.0_voice_gate_unification_prompt.md  0.4.0_voice_gating_review.md  0.4_audio_node_realtime_plan.md
dev/docs/avatar/: 0.5.0_swift_renderer_plan.md  0.5.0_timeline_schema.md  0.5_brainstorm.md
dev/docs/core/: 0.5.0_agent_reorg_plan.md  REVIEW_BRIEF_AGENT.md  SELF_MODIFICATION_BOUNDARIES.md  agent_contract.md  agent_refactor_phase_0.md  agent_refactor_phase_6.md  agent_refactor_phase_7.md  agent_refactor_phase_8.md  agent_refactor_phase_9.md  context_guard.md  deep_think_design.md  external_models.md  kanban_design.md  lean_surface.md  main_loop_review.md  native_handler_ab.md  physical_skills_status.md  toolset_scoping_ab.md
dev/docs/history/: 0.4.0_code_review_prompt.md  0.4.0_pre_main_benchmark.md  0.5.0_walk_the_flow.md  0.8.0_RC_BATTERY.md  BENCHMARK_0.1.0.md  HISTORY.md  JROS_0.8_M1_KOKORO_TTS_PLAN.md  JROS_0.8_M2a_SLOT_RESOLUTION_PLAN.md  JROS_0.8_M2b_WHISPER_STT_PLAN.md  JROS_0.8_M2c_ANIMATION_MEDIA_PLAN.md  JROS_0.8_M3_PLUGINS_PLAN.md  JROS_0.8_MODULE_REFACTOR_SPEC.md  JROS_0.8_U1_BUS_UNIFICATION_PLAN.md  JROS_0.8_U3_SUPERVISION_PLAN.md  ROADMAP_0.2.0.md  ROADMAP_0.4.md  ROADMAP_0.5.md  ROADMAP_0.6.md  SKILL_EVOLUTION_PLAN.md  SWIFT_APP_ARCHITECTURE_PLAN.md  code_review_2026_05_24.md  code_review_prompt.md  hermes_cui_port.md  hermes_internals_audit.md  hermes_tool_parity.md  hermes_tool_skill_audit.md  odysseus_review_and_0.3.0_plan.md  scenario_results_2026-07-06.md  session_retrospective_2026_07.md  skill-evolution-impl-A-signal-trigger.md  skill-evolution-impl-B-review.md  skill-evolution-impl-C-lifecycle.md  skill_schema_v3-v1.md  skill_unification.md  tui_port_notes.md
dev/docs/library_review/: final_review.md  jp01_firmware.md  mochi_demo.md  voicellm.md
dev/docs/pipelines/: README.md  agent_turn_pipeline.md  memory_pipeline.md  model_inference_pipeline.md  permissions_pipeline.md  persona_pipeline.md  skill_discovery_pipeline.md  skill_self_improvement_pipeline.md  transport_pipeline.md  voice_pipeline.md
dev/docs/reality/: STATUS.md  STRUCTURE.md  agentic_runners.md  memory_architecture.md  naming_conventions.md  persona_compiler.md  pipeline_health.md  scenario_bench.md  scenario_test_suite.md  skill_standard.md  system_runtime_user.md
dev/docs/revision_summaries/: 0.1.0.md  0.2.0.md  0.3.0.md  0.4.0.md  0.5.0.md  0.6.0.md  0.7.0.md  0.8.0.md  README.md
dev/docs/roadmap/: 0.9.3_EVERYDAY_AGENCY_PLAN.md  AGENT_IDENTITY_CREATE_FIX_PLAN.md  PERSONA_MODE_C_BUILD_PLAN.md  PERSONA_PIPELINE_ABC_DESIGN.md  RELEASE_0.8.0_RUNWAY.md  agentic_skill_pipeline_backlog.md  future_backlog.md
dev/docs/skill_template/: SKILL.md  example.py
dev/docs/skills/: 0.5.x_skill_tree_evolution_plan.md  SKILL_TREE.md  marketplace_spec.md  skill_schema_v3.md  skill_sharing_pipeline.md
dev/infographic/: README.md  avatar_2d.md  avatar_3d.md  hardware.md  lip_sync.md  media.md  observability.md  stt_llm_tts.md  user_input.md  voice_in_asr.md
dev/pipelines/: README.md  avatar.py  gui.py  media.py  nodes.py  plugins.py  stt.py  tracing.py  tts.py
dev/scripts/: check_wheel.py  dev_env.sh  generate_agent_contract.py  lilith_demo.py  node_verification.py  run_tests.sh  tts_node_test.py  walk_task1_bridge_confirmation.py
dev/tests/: conftest.py
dev/tests/jaeger_ai/: test_mcp_server.py  test_memory_upgrades.py  test_plugins.py  test_protocol_client.py  test_voicellm_ports.py
dev/tests/jaeger_os/: test_mcp_server.py  test_memory_upgrades.py  test_plugins.py  test_protocol_client.py  test_voicellm_ports.py
dev/tools/audio_smoke/: README.md  voice_assistant_avaudio.py  (+2 more)
jaeger_ai/: __init__.py  __main__.py  main.py  module_roots.py
jaeger_ai/agent/: __init__.py  availability.py  module.yaml  safety.py  trace.py
jaeger_ai/cli/: __init__.py  __main__.py  _common.py  config_cmd.py  devtools.py  entry.py  instances_cmd.py  personality_cmd.py  prompt_cmd.py  run.py  runtime_cmd.py  skills_cmd.py  status_cmd.py
jaeger_ai/core/: context.py  credentials.py  sessions.py  version_check.py
jaeger_ai/interfaces/: __init__.py  bridge.py  client.py  mcp_server.py
jaeger_ai/models/: README.md
jaeger_ai/personality/: __init__.py  character.py  compose.py
jaeger_ai/plugins/: __init__.py  _messaging.py  manifest.py  messaging_gateway.py  registry.py  voice_loop.py
jaeger_ai/skill_tree/: __init__.py  schema.py  xp_emitter.py
jaeger_ai/timeline/: runner.py  schema.py
jaeger_os/: README.md  __init__.py  __main__.py  main.py
jaeger_os/agent/: README.md  __init__.py  availability.py  module.yaml  safety.py  trace.py
jaeger_os/assets/: README.md
jaeger_os/cli/: __init__.py  _common.py  avatar_cmd.py  config_cmd.py  devtools.py  entry.py  instances_cmd.py  personality_cmd.py  prompt_cmd.py  roadmap_cmd.py  run.py  runtime_cmd.py  skills_cmd.py  status_cmd.py
jaeger_os/core/: README.md  context.py  credentials.py  messages.py  people.py  sessions.py  version_check.py  windowed.py
jaeger_os/docs/: agent_contract.md
jaeger_os/interfaces/: README.md  __init__.py  bridge.py  client.py  mcp_server.py
jaeger_os/personality/: character.py  compose.py  schema.py
jaeger_os/plugins/: README.md  __init__.py  _messaging.py  messaging_gateway.py  registry.py  voice_loop.py
jaeger_os/skill_tree/: __init__.py  registry.py  schema.py  seed.py  xp_emitter.py
jaeger_os/timeline/: __init__.py  runner.py  schema.py
scripts/: README.md  install.sh
(+1294 files in other folders)
