# JROS — Jaeger-OS packaging + dev-tooling config.
#
# JROS installs as an EDITABLE package (PEP 660): the curl installer — and
# ./install.sh — run `uv pip install -e .` INTO the clone. The code stays
# writable in place (the agent self-modifies its skills; you can hack the
# framework) while you still get real packaging: machine-readable version
# metadata (`jaeger --version`) and `jaeger update` = git pull + editable
# reinstall. This is the Hermes model (editable-into-clone), NOT a PyPI /
# site-packages install — a self-modifying, stateful agent can't live in
# read-only site-packages.
#
# The `jaeger` command is a first-class console-script entry point
# (jaeger_os.cli.entry:main) — one dispatcher behind both the installed
# `jaeger` (on PATH after install) and the ./jaeger wrapper, which delegates
# to it. So `jaeger` works from anywhere, not just inside the repo.
#
# History: 0.2.3 cut JROS from `pip install jaeger-os` to clone + PYTHONPATH,
# which lost the entry point and the update path; 0.6 restored proper
# packaging WITHOUT moving code — jaeger_os/ stays at the repo root, operator
# state in .jaeger_os/ beside it. Version is single-sourced from
# jaeger_os/__init__.py; runtime deps are single-sourced from requirements.txt.

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "jaeger-os"
description = "Jaeger-OS — a fused agentic-AI + robotics framework (the agent is the top layer of the robot stack)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dynamic = ["version", "dependencies"]

[project.optional-dependencies]
# Acoustic echo cancellation for duplex voice. OPTIONAL: the native (SWIG)
# build needs the speex system lib (macOS: brew install speexdsp; Debian:
# apt install libspeexdsp-dev), and core/audio/aec.py degrades to passthrough
# without it. Kept out of the base deps so one optional C extension can't
# break the whole install. Enable with: pip install 'jaeger-os[aec]'.
aec = ["speexdsp>=0.1.1"]

[project.scripts]
jaeger = "jaeger_os.cli.entry:main"

[tool.setuptools.dynamic]
version = {attr = "jaeger_os.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["jaeger_os*"]

[tool.pytest.ini_options]
testpaths = ["dev/tests"]
# Marker tiers — the bench, daemon, model-load, UI, and integration
# suites take real wall time. Mark them and skip by default; the
# ``dev/scripts/run_tests.sh`` driver picks the right subset for CI vs
# local iteration. New tests should pick the closest marker that
# applies (or none — unmarked = fast deterministic unit test).
markers = [
    "slow: tests that fork real processes or do real network I/O (a few seconds each).",
    "integration: cross-module end-to-end paths; may touch the filesystem heavily.",
    "model: tests that load a real GGUF / external LLM; minutes-scale.",
    "ui: TUI / rumps tray tests that may render to a terminal or display.",
    "subprocess: tests that spawn a real Python subprocess (boot, daemon, bench).",
    "smoke: a tiny set tagged so ``pytest -m smoke`` is a 30-second sanity check.",
    "regression: pins a specific bug fix — run on every PR even when narrowing markers.",
]
