# JaegerAI — packaging + dev-tooling config.
#
# Split out of the JROS monorepo (0.9 four-way split); the turnkey
# product (the Mind) — loop, tools, skills, memory, persona, local
# inference, AND its own faces (chat app, TUI, voice, protocol). Ships
# `main.py` + the `jaeger` command. Depends on jaeger-os (the framework
# tier, nothing above it) plus the kokoro_tts/whisper_stt engine
# modules, all three as git dependencies in requirements.txt (@master
# for 0.9; a real version/tag pin replaces it once each repo has
# releases — see that file's header). Engine modules are each their own
# repo, pinning jaeger-os only (never jaeger-ai) — a robot body can run
# those standalone, without the AI product installed at all — but
# JaegerAI installs them by DEFAULT (not as opt-in extras): the curl
# one-liner should produce a voice-capable agent, not a mute one.
#
# JaegerAI installs as an EDITABLE package (PEP 660), same model as
# jaeger-os: the curl installer — and ./install.sh — run
# `uv pip install -e .` INTO the clone. The code stays writable in
# place (the agent self-modifies its skills) while you still get real
# packaging: machine-readable version metadata (`jaeger --version`) and
# `jaeger update` = git pull + editable reinstall.
#
# The `jaeger` command is a first-class console-script entry point
# (jaeger_ai.cli.entry:main) — one dispatcher behind both the installed
# `jaeger` (on PATH after install) and the ./jaeger wrapper, which
# delegates to it. jaeger-os ships NO console script of its own (0.9
# step 4 staging finding: every real cli/ verb imports
# core.instance.schemas at module level — there is no layering-clean
# framework-only CLI subset, so cli/ moved to JaegerAI entirely).
#
# Version is single-sourced from jaeger_ai/__init__.py; runtime deps
# are single-sourced from requirements.txt.

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "jaeger-ai"
description = "JaegerAI — the turnkey agentic-AI product (the Mind): loop, tools, skills, memory, persona, local inference, and its own faces (chat app, TUI, voice, protocol)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dynamic = ["version", "dependencies"]

[project.optional-dependencies]
# Acoustic echo cancellation for duplex voice — passed through from
# jaeger-os (core/audio/aec.py); re-declared here so `pip install
# 'jaeger-ai[aec]'` works without the operator needing to know it's
# actually a jaeger-os extra.
aec = ["speexdsp>=0.1.1"]

[project.scripts]
jaeger = "jaeger_ai.cli.entry:main"

[project.entry-points."jaeger_os.module_roots"]
# The out-of-tree discover_modules() seam (0.9 step 4 split) — see
# jaeger_ai/module_roots.py. JaegerOS finds this WITHOUT ever naming
# jaeger_ai; it only knows the group.
jaeger_ai = "jaeger_ai.module_roots:roots"

[tool.setuptools.dynamic]
version = {attr = "jaeger_ai.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["jaeger_ai*"]

[tool.setuptools.package-data]
# Non-.py assets under the package (module.yaml/plugin.yaml, character
# personas + card art, skill markdown + paper-writing templates, ...) —
# setuptools only auto-includes .py files for a found package; a REAL
# (non-editable) install of jaeger_ai silently drops everything else
# without this. The default install path is editable (masks the gap —
# editable installs read straight from the source tree) but a
# non-editable install (a future PyPI release, or jaeger-ai pulled in
# as someone else's dependency) needs it too — found via the sibling
# engine repos hitting this for real under a git-dependency install.
# "**/*" is deliberately broad rather than an extension allowlist that
# silently misses the next asset type a character/skill adds.
jaeger_ai = ["**/*"]

[tool.pytest.ini_options]
testpaths = ["dev/tests"]
# Marker tiers — the bench, daemon, model-load, UI, and integration
# suites take real wall time. Mark them and skip by default; the
# ``dev/scripts/run_tests.sh`` driver picks the right subset for CI vs
# local iteration. New tests should pick the closest marker that
# applies (or none — unmarked = fast deterministic unit test).
markers = [
    "slow: tests that fork real processes or do real network I/O (a few seconds each).",
    "integration: cross-module end-to-end paths; may touch the filesystem heavily.",
    "model: tests that load a real GGUF / external LLM; minutes-scale.",
    "ui: TUI / rumps tray tests that may render to a terminal or display.",
    "subprocess: tests that spawn a real Python subprocess (boot, daemon, bench).",
    "smoke: a tiny set tagged so ``pytest -m smoke`` is a 30-second sanity check.",
    "regression: pins a specific bug fix — run on every PR even when narrowing markers.",
]
